# phoneToPcGit

Mobile/screenshot/: Android.mk  RawToJpg.cpp  RawToJpg.h  ServerSocket.cpp  Socket.cpp  mutilshot.cpp  mutilshot.h
Mobile/screenshot/CV/: highgui.h
Mobile/screenshot/include/: ServerSocket.h  Socket.h  jpeglib.h  savebmp.h
PC/DR2.0/inc/: wfdsink.h
PC/DR2.0/include/common/: CommonMacro.h
PC/DR2.0/lib/debug/: udptcp.lib
PC/DR2.0/lib/release/: udptcp.lib
PC/DR2.0/libs/: Windows.Foundation.UniversalApiContract.winmd
PC/DR2.0/libs/x64/: wlanapi.lib
PC/DR2.0/libs/x86/: WiFiDisplay.lib  wlanapi.lib
PC/DR2.0/project/: DR2.0.sln
PC/DR2.0/src/DR2API/: CMakeLists.txt  DR2API.vcxproj  RD2API.def  Rstdef.h  WfdSources.cpp  WfdSources.h  WfdStringFormat.cpp  WfdStringFormat.h  WiFiDisplay.lib  dllmain.cpp  stdafx.cpp  stdafx.h  udptcp.cpp  udptcp.h  uibcstruct.h
PC/DR2.0/src/DR2API/DR2API.dir/Debug/DR2API.tlog/: CL.read.1.tlog  CL.write.1.tlog  DR2API.lastbuildstate  DR2API.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PC/phoneToPc/: .project  db.sqlite3  manage.py  wang@10.4.64.40workkeywest_8974
PC/phoneToPc/apk_key/: shared.pk12
PC/phoneToPc/pc/: models.py  urls.py  views.py
PC/phoneToPc/phone/: admin.py  urls.py  views.py
PC/phoneToPc/phoneToPc/: settings.py  urls.py  wsgi.py
PHONE/: PhoneToPC.apk
PHONE/PhoneToPC/: .classpath  .project  AndroidManifest.xml
PHONE/PhoneToPC/apk_key/: platform.keystore
PHONE/PhoneToPC/assets/: mutilshotagent
PHONE/miracast/Project/: .project  AndroidManifest.xml
(+144 files in other folders)
