SET( LIB_NAME DR2API)

MACRO(USE_MSVC_PCH PCH_TARGET PCH_HEADER_FILE PCH_SOURCE_FILE)
IF(MSVC)
	SET_TARGET_PROPERTIES(${PCH_TARGET} PROPERTIES COMPILE_FLAGS
		"/Yu${PCH_HEADER_FILE}")
	SET_SOURCE_FILES_PROPERTIES(${PCH_SOURCE_FILE} PROPERTIES COMPILE_FLAGS
		"/Yc${PCH_HEADER_FILE}")
ENDIF()
ENDMACRO()

INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR}/inc ${PROJECT_SOURCE_DIR}/inc264 ../udptcp)
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/libs/x64")
LINK_LIBRARIES(WiFiDisplay wlanapi ws2_32 udptcp)

file(GLOB_RECURSE CPPS "*.cpp" "*.c")
IF(WIN32)
file(GLOB_RECURSE INCS "*.h" "*.rc" "*.def")
ELSE(WIN32)
file(GLOB_RECURSE INCS "*.h")
ENDIF(WIN32)
set(all_files ${CPPS} ${INCS})
#source_group_by_dir(all_files)

ADD_LIBRARY( ${LIB_NAME} SHARED ${all_files})
#USE_MSVC_PCH(${LIB_NAME} stdafx.h stdafx.cpp)